# SystemMonitor

./: IMPLEMENTATION_SUMMARY.md  Makefile  run_tests.sh
Docs/: architecture.md  requirements.md
include/core/: app_context.h  statistics_store.h  system_stats.h
include/dashboard/: console_dashboard.h
include/monitors/: cpu_monitor.h  disk_io_monitor.h  disk_monitor.h  memory_monitor.h  network_monitor.h  process_monitor.h
include/threads/: collector_thread.h  gui_thread.h  terminal_thread.h
src/: main.c
src/core/: statistics_store.c
src/dashboard/: console_dashboard.c
src/monitors/: cpu_monitor.c  disk_io_monitor.c  disk_monitor.c  memory_monitor.c  network_monitor.c  process_monitor.c
src/threads/: collector_thread.c  gui_thread.c  terminal_thread.c
test/: CMakeLists.txt  README.md  test_cpu_monitor.c  test_statistics_store.c
